[package]
name = "payany"
version = "0.3.2"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ['std'] }
log-panics = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cln-rpc = "0.7"
# cln-rpc = { path = "../lightning/cln-rpc/", version = "^0.6" }
cln-plugin = "0.7"
# cln-plugin = { path = "../lightning/plugins/", version = "^0.6" }

reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "json",
    "rustls-no-provider",
    "socks",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "tls12",
    "std",
    "ring",
] }

tokio-socks = "0.5"

bech32 = "0.11"

regex = "1"

chrono = "0.4"

parking_lot = "0.12"

[dependencies.tokio]
features = ["fs", "net"]
version = "1"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
